<resources>

    <string name="app_name">Assistant</string>
    <string name="action_settings">Настройки</string>
    <string name="action_alarm">Будильники</string>
    <string name="action_reminder">Напоминания</string>
    <string name="action_note">Заметки</string>
    <string name="books">Книги</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_notification">Создать напоминание</string>
    <string name="title_activity_wfefwe">wfefwe</string>
    <string name="notificationTitle">Заголовок</string>
    <string name="notificationDate">Дата</string>
    <string name="notificationTime">Время</string>
    <string name="addNotification">Добавление напоминания</string>
    <string name="bookAuthor">Автор</string>
    <string name="bookName">Название</string>
    <string name="addBook">Добавление книги</string>
    <string name="deleteNotificationTitle">Удалить напоминание?</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="save">СОХРАНИТЬ</string>
    <string-array name="dateSpinner">
        <item>Сегодня</item>
        <item>Завтра</item>
        <item>Другое</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
